<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/medicalIcon"
        android:layout_width="100dp"
        android:layout_height="88dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/textCHMS"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medical_icon" />

    <TextView
        android:id="@+id/textCHMS"
        android:layout_width="185dp"
        android:layout_height="88dp"
        android:text="@string/txtCHMS"
        app:layout_constraintBottom_toBottomOf="@+id/medicalIcon"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/medicalIcon"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="313dp"
        android:layout_height="47dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCHMS" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="313dp"
        android:layout_height="47dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <Button
        android:id="@+id/buttonPressure"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:text="@string/btnPressure"
        app:layout_constraintEnd_toStartOf="@+id/buttonIndicators"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextAge"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

    <Button
        android:id="@+id/buttonIndicators"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:text="@string/btnIndicators"
        app:layout_constraintEnd_toEndOf="@+id/editTextAge"
        app:layout_constraintTop_toTopOf="@+id/buttonPressure" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="34dp"
        android:layout_height="22dp"
        android:layout_marginBottom="3dp"
        android:text="@string/eTxtName"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/eTxtAge"
        app:layout_constraintBottom_toTopOf="@+id/editTextAge"
        app:layout_constraintStart_toStartOf="@+id/editTextAge"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>